--- a/Accueil.html
+++ b/Accueil.html
@@ -9,7 +9,7 @@
 		<div id="bloc_page">
 		<header>
 			<div id="titre_principal">
-				<img src="images/donogro_logo.png" alt="Logo de Donogro" id="logo" />
+				<img src="img/donogro_logo.png" alt="Logo de Donogro" id="logo" />
 				<h1>Fatras, etc.</h1>
 				<h2>Carnets de voyage</h2>
 			</div>
