--- a/Accueil.html
+++ b/Accueil.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8" />
+		<meta charset="UTF-8"/>
 		<link rel="stylesheet" href="style.css" />
 		<title>Fatras, etc. - Donogro</title>
 	</head>
@@ -31,7 +31,7 @@
 		</div>
 		<section>
 			<article>
-				<h1><img src="images/Foutaises.png" alt="Catégorie Foutaises" class="ico_categorie" />Foutaises.</h1>
+				<h1><img src="img/ico_foutaises.png" alt="Catégorie Foutaises" class="ico_categorie" />Foutaises.</h1>
 				<p>Je suis une foutaise.</p>
 				<p>Est-ce qu'il est nécessare d'avoir des opinions, et pourquoi ? Connaître ses goûts, est-ce avoir un avis ? À quoi peut-il bien servir de vouloir s'exprimer ? En ce qui me concerne, je n'en sais rien</p>
 				<p>Quoi qu'il en soit, voici une tentative prudente de découvrir si je parviendrai à vouloir m'exprimer.</p>
