--- a/Accueil.html
+++ b/Accueil.html
@@ -36,20 +36,11 @@
 				<p>Est-ce qu'il est nécessare d'avoir des opinions, et pourquoi ? Connaître ses goûts, est-ce avoir un avis ? À quoi peut-il bien servir de vouloir s'exprimer ? En ce qui me concerne, je n'en sais rien</p>
 				<p>Quoi qu'il en soit, voici une tentative prudente de découvrir si je parviendrai à vouloir m'exprimer.</p>
 			</article>
-<!--			<aside>
-				<h1>À propos de l'auteur</h1>
-				<img src="images/bulle.png" alt="" id="fleche_bulle" />
-				<p id="photo_donogro"><img src="images/donogro_pic.png" alt="Photo de Zozor" /></p>
-				<p>Laisse-moi le temps de me présenter : je m'appelle Zozor, je suis né un 23 novembre 2005.</p>
-				<p>Bien maigre, n'est-ce pas ? C'est pourquoi, aujourd'hui, j'ai décidé d'écrire ma biographie (ou zBiographie, comme vous voulez !) afin que les zéros sachent qui je suis réellement.</p>
-				<p><img src="images/rss.png" alt="RSS" /></p>
-			</aside>
--->		</section>
+		</section>
 		<footer>
 			<div id="mes_photos">
 				<h1>Mes photos</h1>
 				<p><img src="images/photo1.jpg" alt="Photographie" /><img src="images/photo2.jpg" alt="Photographie" /><img src="images/photo3.jpg" alt="Photographie" /><img src="images/photo4.jpg" alt="Photographie" /></p>
-			</div>
 			</div>
 		</footer>
 		</div>
