--- a/Accueil.html
+++ b/Accueil.html
@@ -2,34 +2,30 @@
 <html>
 	<head>
 		<meta charset="UTF-8"/>
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="../css/style_2.css" />
 		<title>Fatras, etc. - Donogro</title>
 	</head>
 	<body>
-		<div id="bloc_page">
+
 		<header>
-			<div id="titre_principal">
+			<a class="titre-principal" href="https://wp-themes.com/" title="Theme Preview" rel="home">
 				<img src="img/donogro_logo.png" alt="Logo de Donogro" id="logo" />
 				<h1>Fatras, etc.</h1>
-				<h2>Carnets de voyage</h2>
-			</div>
-			<nav>
+				<p>Du bric-à-brac un brin foutraque.</p>
+			</a>
+			<nav id="navigation-site">
 				<ul>
 					<li><a href="#">Accueil</a></li>
 					<li><a href="#">Entrées</a></li>
 					<li><a href="#">Bourdes</a></li>
 					<li><a href="#">Etc.</a></li>
+					<li><a href="#">À propos</a></li>
 				</ul>
 			</nav>
 		</header>
 
-		<div id="banniere_image">
-			<div id="banniere_description">
-				Miam miam, lunchboxes !
-				<a href="#" class="bouton_rouge">Accéder à la page</a>
-			</div>
-		</div>
-		<section>
+		<div id="bloc_contenu">
+		<section id="contenu_principal">
 			<article>
 				<h1><img src="img/ico_foutaises.png" alt="Catégorie Foutaises" class="ico_categorie" />Foutaises.</h1>
 				<p>Je suis une foutaise.</p>
@@ -37,10 +33,73 @@
 				<p>Quoi qu'il en soit, voici une tentative prudente de découvrir si je parviendrai à vouloir m'exprimer.</p>
 			</article>
 		</section>
-		<footer>
-			<div id="mes_photos">
-				<h1>Mes photos</h1>
-				<p><img src="images/photo1.jpg" alt="Photographie" /><img src="images/photo2.jpg" alt="Photographie" /><img src="images/photo3.jpg" alt="Photographie" /><img src="images/photo4.jpg" alt="Photographie" /></p>
+		<section id="contenu_marge">
+			<article>
+				<h1>Miam miam miam miam</h1>
+				<div class="slideshow-container">
+					<!-- Full-width images with number and caption text -->
+					<div class="mySlides fade">
+						<div class="numbertext">1 / 4</div>
+						<img src="img/photo1.jpg" alt="Photographie" style="width:100%">
+						<div class="text">Caption Text</div>
+					</div>
+					<div class="mySlides fade">
+						<div class="numbertext">2 / 4</div>
+						<img src="img/photo2.jpg" alt="Photographie" style="width:100%">
+						<div class="text">Caption Two</div>
+					</div>
+					<div class="mySlides fade">
+						<div class="numbertext">3 / 4</div>
+						<img src="img/photo3.jpg" alt="Photographie" style="width:100%">
+						<div class="text">Caption Three</div>
+					</div>
+					<div class="mySlides fade">
+						<div class="numbertext">4 / 4</div>
+						<img src="img/photo4.jpg" alt="Photographie" style="width:100%">
+						<div class="text">Caption Four</div>
+					</div>
+					<!-- Next and previous buttons -->
+					<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+					<a class="next" onclick="plusSlides(1)">&#10095;</a>
+				</div>
+			</article>
+		</section>
+		<footer id="site-footer" role="contentinfo">
+			<div class="liens_pied">
+				<div class="colonne_pied">
+					<aside>
+						<h1>Postes récents</h1>
+						<p>Petit 1</p>
+						<p>Petit 2</p>
+						<p>Petit 3</p>
+						<p>Petit 4</p>
+					</aside>
+				</div>
+				<div class="colonne_pied">
+					<aside>
+						<h1>Postes récents</h1>
+						<p>Petit 1</p>
+						<p>Petit 2</p>
+						<p>Petit 3</p>
+						<p>Petit 4</p>
+					</aside>
+				</div>
+				</div>
+				<div class="colonne_pied">
+					<aside>
+						<h1>Recherche</h1>
+						<form role="search" method="get" class="search-form" action="https://wp-themes.com/">
+							<label>
+								<span class="screen-reader-text">Search for:</span>
+								<input type="search" class="search-field" placeholder="Search &hellip;" value="" name="s" />
+							</label>
+							<input type="submit" class="search-submit" value="Search" />
+						</form>
+					</aside>
+				</div>
+			</div>
+			<div class="bandeau_pied">
+				Proudly powered by Personne <span class="sep"> &middot; </span> Theme: Rien by Donogro
 			</div>
 		</footer>
 		</div>
