--- a/html/Accueil_2.html
+++ b/html/Accueil_2.html
@@ -10,8 +10,10 @@
 		<header>
 			<div id="bandeau-entete">
 				<a class="titre-principal" href="Accueil_2.html" title="Retour à l'accueil" rel="home">
-					<img src="../img/donogro_logo.png" alt="Dono-logro" id="logo" />
-					<h1>Fatras, etc.</h1>
+					<h1>
+						<img src="../img/donogro_logo.png" alt="Dono-logro" id="logo" />
+						Fatras, etc.
+					</h1>
 					<p>Du bric-à-brac un brin foutraque.</p>
 				</a>
 			</div>
