--- a/html/Accueil_2-ENTETE.html
+++ b/html/Accueil_2-ENTETE.html
@@ -17,8 +17,8 @@
 					<p>Du bric-à-brac un brin foutraque.</p>
 				</a>
 			</div>
-			<div>
-				<div id="barre-menu">
+			<div id="barre-menu">
+				<div id="barre-menu-centrer">
 					<nav id="navigation-site">
 						<ul>
 							<li><a href="#">Accueil</a></li>
@@ -27,10 +27,10 @@
 							<li><a href="#">Etc.</a></li>
 						</ul>
 					</nav>
-	<!--				<div id="champ-recherche">
+<!--				<div id="champ-recherche">
 						<img src="../img/ico-search.png" class="showbtn" onclick="fonctionChampDeRecherche()">
+					</div>
 -->				</div>
-			</div>
 			</div>
 		</header>
 
