--- a/html/Accueil_2-ENTETE.html
+++ b/html/Accueil_2-ENTETE.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
 		<meta charset="UTF-8"/>
-		<link rel="stylesheet" href="../css/style_2.css" />
+		<link rel="stylesheet" href="../css/style_header.css" />
+		<link rel="stylesheet" href="../css/style_bloc-contenu.css" />
 		<title>Fatras, etc. - Donogro</title>
 	</head>
 	<body>
@@ -11,10 +12,10 @@
 			<div id="bandeau-entete" role="banner">
 				<a class="titre-principal" href="Accueil_2.html" title="Retour à l'accueil" rel="home">
 					<h1>
-<!--						<img src="../img/donogro_logo.png" alt="Dono-logro" id="logo" />
--->						Fatras, etc.
+						<!--	<img src="../img/donogro_logo.png" alt="Dono-logro" id="logo" /> -->
+						FATRAS, etc.
 					</h1>
-					<p>Du bric-à-brac un brin foutraque.</p>
+					<p>un bric-à-brac un brin foutraque</p>
 				</a>
 			</div>
 			<div id="barre-menu">
@@ -27,13 +28,41 @@
 							<li><a href="#">Etc.</a></li>
 						</ul>
 					</nav>
-<!--				<div id="champ-recherche">
-						<img src="../img/ico-search.png" class="showbtn" onclick="fonctionChampDeRecherche()">
-					</div>
--->				</div>
+				</div>
 			</div>
 		</header>
 
+		<div id="bloc-contenu">
+			<section id="contenu-principal" role="main">
+				<article>
+					<h1>Foutaises.</h1>
+					<p>Lorem ipsum dolor sit amet,</p>
+					<p>Consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue. Praesent egestas leo in pede. Praesent blandit odio eu enim. Pellentesque sed dui ut augue blandit sodales. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aliquam nibh. Mauris ac mauris sed pede pellentesque fermentum. Maecenas adipiscing ante non diam sodales hendrerit.</p>
+					<p>Ut velit mauris, egestas sed, gravida nec, ornare ut, mi. Aenean ut orci vel massa suscipit pulvinar. Nulla sollicitudin. Fusce varius, ligula non tempus aliquam, nunc turpis ullamcorper nibh, in tempus sapien eros vitae ligula. Pellentesque rhoncus nunc et augue. Integer id felis. Curabitur aliquet pellentesque diam. Integer quis metus vitae elit lobortis egestas. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi vel erat non mauris convallis vehicula. Nulla et sapien. Integer tortor tellus, aliquam faucibus, convallis id, congue eu, quam. Mauris ullamcorper felis vitae erat. Proin feugiat, augue non elementum posuere, metus purus iaculis lectus, et tristique ligula justo vitae magna.</p>
+					<p>Aliquam convallis sollicitudin purus. Praesent aliquam, enim at fermentum mollis, ligula massa adipiscing nisl, ac euismod nibh nisl eu lectus. Fusce vulputate sem at sapien. Vivamus leo. Aliquam euismod libero eu enim. Nulla nec felis sed leo placerat imperdiet. Aenean suscipit nulla in justo. Suspendisse cursus rutrum augue. Nulla tincidunt tincidunt mi. Curabitur iaculis, lorem vel rhoncus faucibus, felis magna fermentum augue, et ultricies lacus lorem varius purus. Curabitur eu amet.</p>
+
+					<!--	<img src="../img/Jetee.jpg"> -->
+					<a href="#" class="toutLire">En savoir plus</a>
+				</article>
+			</section>
+
+			<aside id="contenu-marge" role="complementary">
+				<div class="liens">
+					<h1>Projets</h1>
+					<ul>
+						<li>Projet 1</li>
+						<li>Projet numba 2</li>
+						<li>Pro(jam)et 203</li>
+					</ul>
+				</div>
+				<div class="liens">
+					<h1>Tags</h1>
+					<span>Tag 1</span> <span>Tag 2</span> <span>Tag 3</span>
+					<span>Tag 4</span> <span>Tag 5</span> <span>Tag 6</span>
+				</div>
+			</aside>
+
+		</div>
 
 	</body>
 </html>
