--- a/html/Accueil_2-ENTETE.html
+++ b/html/Accueil_2-ENTETE.html
@@ -9,26 +9,27 @@
 	<body>
 
 		<header>
-			<div id="bandeau-entete" role="banner">
-				<a class="titre-principal" href="Accueil_2.html" title="Retour à l'accueil" rel="home">
+		<!--	<div id="bandeau-entete" role="banner"> -->
+				<a class="titre-site" href="Accueil_2.html" title="Retour à l'accueil" rel="home">
 					<h1>
-						<!--	<img src="../img/donogro_logo.png" alt="Dono-logro" id="logo" /> -->
 						FATRAS, etc.
 					</h1>
 					<p>un bric-à-brac un brin foutraque</p>
 				</a>
-			</div>
-			<div id="barre-menu">
-				<div id="barre-menu-centrer">
-					<nav id="navigation-site">
+		<!--	</div> -->
+			<div id="barre-nav">
+				<nav id="nav-site">
+					<h4 id="menu-toggle">Menu</h4>
+					<div id="nav-menu">
 						<ul>
 							<li><a href="#">Accueil</a></li>
 							<li><a href="#">Entrées</a></li>
 							<li><a href="#">Projets</a></li>
 							<li><a href="#">Etc.</a></li>
 						</ul>
-					</nav>
-				</div>
+					</div>
+					<div id="nav-rech">RECH</div>
+				</nav>
 			</div>
 		</header>
 
