--- a/html/Accueil_2-ENTETE.html
+++ b/html/Accueil_2-ENTETE.html
@@ -24,7 +24,13 @@
 						<ul>
 							<li><a href="#">Accueil</a></li>
 							<li><a href="#">Entrées</a></li>
-							<li><a href="#">Projets</a></li>
+							<li>
+								<a href="#">Projets</a>
+								<ul class="sous-menu">
+									<li><a href="#">Projet 1</a></li>
+									<li><a href="#">Projet numba 2</a></li>
+								</ul>
+							</li>
 							<li><a href="#">Etc.</a></li>
 						</ul>
 					</div>
